refactor: 🔨 break os specific commands into files; add auto token grabbing
Signed-off-by: kernel-sanders <1490292+kernel-sanders@users.noreply.github.com>

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -19,6 +19,6 @@ galaxy_info:
     - name: Ubuntu
       versions:
         - "focal"
-        - "bionic"   
+        - "bionic"
   galaxy_tags:
-    - elastic-agent
+    - elasticagent
