--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,5 @@
 ---
+ludus_elastic_container_install_path: /opt/elastic_container # on the server VM for automatic token extraction
 ludus_elastic_enrollment_token: ""
 ludus_elastic_fleet_server: ""
 ludus_elastic_agent_version: "8.12.2"
