--- a/tasks/get_fleet_server.yml
+++ b/tasks/get_fleet_server.yml
@@ -1,7 +1,7 @@
 - name: Extract vm_name of elastic server
   ansible.builtin.set_fact:
-    ludus_elastic_vm_vlan: "{{ ludus_vars | selectattr('roles', 'search', 'ludus_elastic_container$') | map(attribute='vlan') | first }}"
-    ludus_elastic_vm_ip_last_octet: "{{ ludus_vars | selectattr('roles', 'search', 'ludus_elastic_container$') | map(attribute='ip_last_octet') | first }}"
+    ludus_elastic_vm_vlan: "{{ ludus | selectattr('roles', 'search', 'ludus_elastic_container$') | map(attribute='vlan') | first }}"
+    ludus_elastic_vm_ip_last_octet: "{{ ludus | selectattr('roles', 'search', 'ludus_elastic_container$') | map(attribute='ip_last_octet') | first }}"
 
 - name: Fail if no elastic server VM found
   ansible.builtin.fail:
