--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,5 @@
 ---
+ludus_install_directory: /opt/ludus
 ludus_elastic_container_install_path: /opt/elastic_container # on the server VM for automatic token extraction
 ludus_elastic_fleet_port: "8220" # what port does the server VM fleet service listen on (for automatic fleet server URL)
 ludus_elastic_enrollment_token: ""
