--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -1,13 +1,13 @@
 - name: Check if Elastic agent bin exists on Ludus for Debian/Ubuntu Targets
   ansible.builtin.stat:
-    path: "/opt/ludus/resources/linux/elastic-agent-{{ ludus_elastic_agent_version }}-linux-x86_64.tar.gz"
+    path: "{{ ludus_install_directory }}/resources/elastic/elastic-agent-{{ ludus_elastic_agent_version }}-linux-x86_64.tar.gz"
   register: linux_agent_exists
   delegate_to: localhost
 
 - name: Download the Linux Elastic agent if it doesn't exist
   ansible.builtin.get_url:
     url: "https://artifacts.elastic.co/downloads/beats/elastic-agent/elastic-agent-{{ ludus_elastic_agent_version }}-linux-x86_64.tar.gz"
-    dest: "/opt/ludus/resources/linux/elastic-agent-{{ ludus_elastic_agent_version }}-linux-x86_64.tar.gz"
+    dest: "/opt/ludus/resources/elastic/elastic-agent-{{ ludus_elastic_agent_version }}-linux-x86_64.tar.gz"
     mode: "0644"
   delegate_to: localhost
   when: not linux_agent_exists.stat.exists
@@ -20,7 +20,7 @@
 
 - name: Copy Elastic agent to Linux target
   ansible.builtin.copy:
-    src: "/opt/ludus/resources/elastic/elastic-agent-{{ ludus_elastic_agent_version }}-linux-x86_64.tar.gz"
+    src: "{{ ludus_install_directory }}/resources/elastic/elastic-agent-{{ ludus_elastic_agent_version }}-linux-x86_64.tar.gz"
     dest: "/opt/ludus"
     mode: "0644"
 
@@ -38,7 +38,6 @@
   ansible.builtin.file:
     path: "/opt/ludus/elastic-agent-{{ ludus_elastic_agent_version }}"
     state: absent
-    recurse: true
   become: true
 
 - name: Unzip Elastic agent on Linux target
