--- a/tasks/get_fleet_server.yml
+++ b/tasks/get_fleet_server.yml
@@ -1,13 +1,16 @@
-- name: Extract vm_name of elastic server
+- name: Extract values of elastic server
   ansible.builtin.set_fact:
-    ludus_elastic_vm_vlan: "{{ ludus | selectattr('roles', 'search', 'ludus_elastic_container$') | map(attribute='vlan') | first }}"
-    ludus_elastic_vm_ip_last_octet: "{{ ludus | selectattr('roles', 'search', 'ludus_elastic_container$') | map(attribute='ip_last_octet') | first }}"
+    ludus_elastic_vm_vlan: "{{ vm_entry.vlan }}"
+    ludus_elastic_vm_ip_last_octet: "{{ vm_entry.ip_last_octet }}"
+  loop: "{{ ludus }}"
+  loop_control:
+    loop_var: vm_entry
+  when: vm_entry.roles is defined and 'ludus_elastic_container' in vm_entry.roles | join(' ')
 
 - name: Fail if no elastic server VM found
   ansible.builtin.fail:
     msg: "Could not find any VM that has the *.ludus_elastic_container role in your config"
-  when: (ludus_elastic_vm_vlan is undefined or ludus_elastic_vm_vlan is None)
-        or (ludus_elastic_vm_ip_last_octet is undefined or ludus_elastic_vm_ip_last_octet is None)
+  when: ludus_elastic_vm_vlan is undefined or ludus_elastic_vm_ip_last_octet is undefined
 
 - name: Set the token
   ansible.builtin.set_fact:
