--- a/tasks/windows.yml
+++ b/tasks/windows.yml
@@ -1,13 +1,13 @@
 - name: Check if Elastic agent bin exists on Ludus for Windows targets
   ansible.builtin.stat:
-    path: "/opt/ludus/resources/windows/elastic-agent-{{ ludus_elastic_agent_version }}-windows-x86_64.zip"
+    path: "{{ ludus_install_directory }}/resources/elastic/elastic-agent-{{ ludus_elastic_agent_version }}-windows-x86_64.zip"
   register: windows_agent_exists
   delegate_to: localhost
 
 - name: Download the Windows Elastic agent if it doesn't exist
   ansible.builtin.get_url:
     url: "https://artifacts.elastic.co/downloads/beats/elastic-agent/elastic-agent-{{ ludus_elastic_agent_version }}-windows-x86_64.zip"
-    dest: "/opt/ludus/resources/windows/elastic-agent-{{ ludus_elastic_agent_version }}-windows-x86_64.zip"
+    dest: "{{ ludus_install_directory }}/resources/elastic/elastic-agent-{{ ludus_elastic_agent_version }}-windows-x86_64.zip"
     mode: "0644"
   delegate_to: localhost
   when: not windows_agent_exists.stat.exists
@@ -19,7 +19,7 @@
 
 - name: Copy Elastic agent to Windows target
   ansible.windows.win_copy:
-    src: "/opt/ludus/resources/elastic/elastic-agent-{{ ludus_elastic_agent_version }}-windows-x86_64.zip"
+    src: "{{ ludus_install_directory }}/resources/elastic/elastic-agent-{{ ludus_elastic_agent_version }}-windows-x86_64.zip"
     dest: "C:\\ludus"
 
 - name: Uninstall Elastic agent if installed on Windows
