--- a/tasks/get_token.yml
+++ b/tasks/get_token.yml
@@ -5,7 +5,7 @@
 - name: Fail if no elastic server VM found
   ansible.builtin.fail:
     msg: "Could not find any VM that has the *.ludus_elastic_container role in your config"
-  when: ludus_elastic_vm != None
+  when: ludus_elastic_vm is undefined or ludus_elastic_vm == None or ludus_elastic_vm | length == 0
 
 - name: Get the enrollment-token from the server
   ansible.builtin.slurp:
