--- a/tasks/sysmon.yml
+++ b/tasks/sysmon.yml
@@ -2,37 +2,37 @@
   run_once: true
   become: false
   block:
-    - name: Create /opt/ludus/resources/sysmon directory if it doesn't exist
+    - name: Create /opt/ludus/resources/ludus_elastic_agent directory if it doesn't exist
       ansible.builtin.file:
-        path: "{{ ludus_install_directory }}/resources/sysmon"
+        path: "{{ ludus_install_directory }}/resources/ludus_elastic_agent"
         state: directory
         recurse: true
       delegate_to: localhost
 
     - name: Check if sysmon bin exists on Ludus for Windows targets
       ansible.builtin.stat:
-        path: "{{ ludus_install_directory }}/resources/sysmon/sysmon.zip"
+        path: "{{ ludus_install_directory }}/resources/ludus_elastic_agent/sysmon.zip"
       register: windows_sysmon_exists
       delegate_to: localhost
 
     - name: Download the Windows sysmon bin if it doesn't exist
       ansible.builtin.get_url:
         url: "https://download.sysinternals.com/files/Sysmon.zip"
-        dest: "{{ ludus_install_directory }}/resources/sysmon/sysmon.zip"
+        dest: "{{ ludus_install_directory }}/resources/ludus_elastic_agent/sysmon.zip"
         mode: "0644"
       delegate_to: localhost
       when: not windows_sysmon_exists.stat.exists
 
     - name: Check if sysmon config exists on Ludus for Windows targets
       ansible.builtin.stat:
-        path: "{{ ludus_install_directory }}/resources/sysmon/sysmon.xml"
+        path: "{{ ludus_install_directory }}/resources/ludus_elastic_agent/sysmon.xml"
       register: windows_sysmon_config_exists
       delegate_to: localhost
 
     - name: Download the Windows sysmon config if it doesn't exist
       ansible.builtin.get_url:
         url: "https://github.com/SwiftOnSecurity/sysmon-config/raw/refs/heads/master/sysmonconfig-export.xml"
-        dest: "{{ ludus_install_directory }}/resources/sysmon/sysmon.xml"
+        dest: "{{ ludus_install_directory }}/resources/ludus_elastic_agent/sysmon.xml"
         mode: "0644"
       delegate_to: localhost
       when: not windows_sysmon_config_exists.stat.exists
@@ -52,12 +52,12 @@
 
     - name: Copy Sysmon.zip to the target
       ansible.windows.win_copy:
-        src: "{{ ludus_install_directory }}/resources/sysmon/sysmon.zip"
+        src: "{{ ludus_install_directory }}/resources/ludus_elastic_agent/sysmon.zip"
         dest: "C:\\Ludus\\sysmon.zip"
 
     - name: Copy Sysmon.xml to the target
       ansible.windows.win_copy:
-        src: "{{ ludus_install_directory }}/resources/sysmon/sysmon.xml"
+        src: "{{ ludus_install_directory }}/resources/ludus_elastic_agent/sysmon.xml"
         dest: "C:\\Program Files (x86)\\Sysmon\\sysmon.xml"
 
     - name: Unzip Sysmon.zip
