Update to work with debian family - kali, update to create the resources/elastic directory to mitigate failures during missing/incorrect dir structure.

--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -1,3 +1,11 @@
+
+- name: Ensure Elastic resources directory exists on Ludus
+  ansible.builtin.file:
+    path: "{{ ludus_install_directory }}/resources/elastic"
+    state: directory
+    mode: "0770"
+  delegate_to: localhost
+
 - name: Check if Elastic agent bin exists on Ludus for Debian/Ubuntu Targets
   ansible.builtin.stat:
     path: "{{ ludus_install_directory }}/resources/elastic/elastic-agent-{{ ludus_elastic_agent_version }}-linux-x86_64.tar.gz"
