--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,7 +9,7 @@
     file: get_token.yml
   when: ludus_elastic_enrollment_token == ""
 
-- name: Alert is ludus_elastic_fleet_server is not set
+- name: Alert if ludus_elastic_fleet_server is not set
   ansible.builtin.debug:
     msg: "ludus_elastic_fleet_server is not set. Attempting to set it automatically."
   when: ludus_elastic_fleet_server == ""
@@ -27,7 +27,7 @@
 - name: Setup Elastic agent on a Debian based machine
   ansible.builtin.include_tasks:
     file: debian.yml
-  when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+  when: ansible_os_family == 'Debian' or ansible_distribution == 'Ubuntu'
 
 - name: Tell the user to check the Kibana Dashboard
   ansible.builtin.debug:
