--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,7 +4,7 @@ dependencies: []
 galaxy_info:
   role_name: ludus_elastic_agent
   author: badsectorlabs
-  description: Installs an Elastic Agent on a windows, debian or ubuntu target
+  description: Installs an Elastic Agent on a windows, redhat, debian or ubuntu target
   company: Bad Sector Labs
   license: GPLv3
   min_ansible_version: "2.10"
@@ -20,5 +20,9 @@ galaxy_info:
       versions:
         - "focal"
         - "bionic"
+    - name: EL
+      versions:
+        - "8"
+        - "9"
   galaxy_tags:
     - elasticagent
